2.8.4.1
[#] Fixed event errors at /reload