@@ -35,7 +35,7 @@
 # stay time (2 seconds) and fade out delay (3 seconds)
 # For any questions or issues, please contact me on discord or via pm.
 # --------------------------
-# Translated by Xjojo
+# Translated by XjojoX
 
 general:
   wYes: '&aJa'
