@@ -1,2 +1,3 @@
-2.8.4.1
-[#] Fixed event errors at /reload
+[#] Added error message if there occurs a bug in your economy plugin.
+
+[#] Fixed /Lands create does not take cost
